force-app/main/default/objects/Insight_and_Alert__c/Insight_and_Alert__c.object-meta.xml
<CustomObject>
    <label>Insight and Alert</label>
    <nameField>
        <label>Insight and Alert Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insight and Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>