force-app/main/default/objects/Insight_and_Alert__c/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <label>Context</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Potential</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>To-Do</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>