force-app/main/default/objects/Insight_and_Alert__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <label>Details</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>