force-app/main/default/objects/Insight_and_Alert__c/fields/Open_Record__c.field-meta.xml
<CustomField>
    <fullName>Open_Record__c</fullName>
    <label>Open Record</label>
    <type>Url</type>
</CustomField>