force-app/main/default/objects/Insight_and_Alert__c/fields/Rationale__c.field-meta.xml
<CustomField>
    <fullName>Rationale__c</fullName>
    <inlineHelpText>Why Agentforce thinks this is worth your attention</inlineHelpText>
    <label>Rationale</label>
    <type>TextArea</type>
</CustomField>