force-app/main/default/objects/Insight_and_Alert__c/fields/Suggested_Action__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Action__c</fullName>
    <label>Suggested Action</label>
    <length>30</length>
    <type>Text</type>
</CustomField>