force-app/main/default/objects/Insight_and_Alert__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Topic__c</columns>
    <columns>Context__c</columns>
    <columns>Suggested_Action__c</columns>
    <columns>Rationale__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>